fix a couple more links

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li class="divider"></li>
 
             <li>DESIGN PATTERNS</li>
-            <li role="menuitem"><a href="story-headings">Story Headings</a></li>
+            <li role="menuitem"><a href="#story-headings">Story Headings</a></li>
             <li role="menuitem"><a href="#thumbnail-grid">Thumbnail grid</a></li>
             <li role="menuitem"><a href="#footer-example">Footer</a></li>
 
@@ -117,7 +117,7 @@
             <li role="menuitem"><a href="#vertical-logos">Vertical logos <i class="fa fa-link"></i></a></li>
             <li role="menuitem"><a href="#diamond">Diamond logo <i class="fa fa-link"></i></a></li>
             <li role="menuitem"><a href="#logo-mark">Product Logo Mark <i class="fa fa-link"></i></a></li>
-          </ul">
+          </ul>
       </div>
       <div class="medium-9 columns">
         <div class="row">
@@ -131,9 +131,9 @@
             <h4>Versions</h4>
             <p>PurpleLine is available in the following versions. The most recent changes will be in both the highest version number and in <code>latest</code>. You should almost always use the most recent version number, though all of the URLs used throughout this guide reference the <code>latest</code> branch.</p>
             <ul>
-              <li><a href="">latest</a></li>
-              <li><a href="">1.0.1</a></li>
-              <li><a href="">1.0.0</a></li>
+              <li><a href="http://cdn.knightlab.com/libs/purpleline/latest/css/purpleline.css">latest</a></li>
+              <li><a href="http://cdn.knightlab.com/libs/purpleline/1.0.1/css/purpleline.css">1.0.1</a></li>
+              <li><a href="http://cdn.knightlab.com/libs/purpleline/1.0.0/css/purpleline.css">1.0.0</a></li>
             </ul>
             <h6>CSS</h6>
               <div class="row collapse code-snippet">
