--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
             <section class="clearfix">
               <hr />
               <h4 id="grid-system">Grid system</h4>
-              <p><a href=http://foundation.zurb.com/docs/components/grid.html">Foundation's grid system <i class="fa fa-external-link"></i></a> is based on rows and columns. *PurpleLine's rows have a <code>max-width</code> of <code>1200px</code>. If you want to allow your content to be wider than 1200px, simply omit the use of the <code>row</code> div and use only the column classes. You do not need to use columns within rows. *However, you may find it helpful to use <code>.row.full-width</code> if you are having difficulty aligning columns.</p>
+              <p><a href="http://foundation.zurb.com/docs/components/grid.html">Foundation's grid system <i class="fa fa-external-link"></i></a> is based on rows and columns. *PurpleLine's rows have a <code>max-width</code> of <code>1200px</code>. If you want to allow your content to be wider than 1200px, simply omit the use of the <code>row</code> div and use only the column classes. You do not need to use columns within rows. *However, you may find it helpful to use <code>.row.full-width</code> if you are having difficulty aligning columns.</p>
             <div class="panel">
               <h6 class="label">Grid system</h6>
                 <div class="row">
