fix alignment on form postfix and prefix buttons

--- a/index.html
+++ b/index.html
@@ -946,17 +946,25 @@
                     <input type="text" placeholder="large-4.columns" />
                   </div>
                   <div class="large-4 medium-4 columns">
-                    <label>Input Label</label>
-                    <input type="text" placeholder="large-4.columns" />
-                  </div>
-                  <div class="large-4 medium-4 columns">
                     <div class="row collapse">
                       <label>Input Label</label>
                       <div class="small-9 columns">
                         <input type="text" placeholder="small-9.columns" />
                       </div>
                       <div class="small-3 columns">
-                        <span class="postfix">.com</span>
+                        <input type="submit" class="button info small postfix" value="Go!" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="large-4 medium-4 columns">
+                    <div class="row collapse">
+                      <label>Input Label</label>
+                      <div class="small-3 columns">
+                        <span class="prefix">1 (800)</span>
+                      </div>
+
+                      <div class="small-9 columns">
+                        <input type="text" placeholder="small-9.columns" />
                       </div>
                     </div>
                   </div>
@@ -1008,17 +1016,24 @@
         &lt;input type="text" placeholder="large-4.columns" /&gt;
       &lt;/div&gt;
       &lt;div class="large-4 medium-4 columns"&gt;
-        &lt;label&gt;Input Label&lt;/label&gt;
-        &lt;input type="text" placeholder="large-4.columns" /&gt;
-      &lt;/div&gt;
-      &lt;div class="large-4 medium-4 columns"&gt;
-        &lt;div class="row collapse"&gt;
+       &lt;div class="row collapse"&gt;
           &lt;label&gt;Input Label&lt;/label&gt;
           &lt;div class="small-9 columns"&gt;
             &lt;input type="text" placeholder="small-9.columns" /&gt;
           &lt;/div&gt;
           &lt;div class="small-3 columns"&gt;
-            &lt;span class="postfix"&gt;.com&lt;/span&gt;
+            &lt;input type="submit" class="postfix button info small" value="Go!" /&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class="large-4 medium-4 columns"&gt;
+        &lt;div class="row collapse"&gt;
+          &lt;label&gt;Input Label&lt;/label&gt;
+          &lt;div class="small-3 columns"&gt;
+            &lt;span class="prefix"&gt;1 (800)&lt;/span&gt;
+          &lt;/div&gt;
+          &lt;div class="small-9 columns"&gt;
+            &lt;input type="text" placeholder="small-9.columns" /&gt;
           &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
