document version of font awesome, closes #26

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                   <input type="text" value="//cdn.knightlab.com/libs/purpleline/latest/css/font-awesome/font-awesome.css"></input>
                 </div>
               </div>
-              <p>Details on available icons and how to use them can be found on the <a href="//fortawesome.github.io/Font-Awesome/examples/">FontAwesome website <i class="fa fa-external-link"></i></a>. Some of the Knight Lab's commonly used icons are below.</p>
+              <p>PurpleLine currently offers FontAwesome v.4.3.0. Details on available icons and how to use them can be found on the <a href="//fortawesome.github.io/Font-Awesome/examples/">FontAwesome website <i class="fa fa-external-link"></i></a>. Some of the Knight Lab's commonly used icons are below.</p>
               <div class="medium-6 columns panel">
                 <h6 class="label">Icon examples</h6>
                 <i class="fa fa-chevron-right"></i>
