Updating color scheme

--- a/index.html
+++ b/index.html
@@ -323,6 +323,21 @@
               </div>
             </section>
             <section class="clearfix"><hr />
+              <h4 id="horizontal-rule">Well</h4>
+              <div class="panel">
+                <h6 class="label">Well</h6>
+                <div class="well">
+                    <p>Well content</p>
+                </div>
+<h6 class="label">HTML</h6>
+<pre><code class="html">
+  &lt;div class="well"&gt;
+    &lt;p&gt;Well content&lt;/p&gt;
+  &lt;/div&gt;
+</code></pre>
+              </div>
+            </section>
+            <section class="clearfix"><hr />
               <h4 id="blockquote">Quotes</h4>
               <p>Quotes come in two varieties: the inline quote (<code>q</code>)and the <code>blockquote</code>.</p>
               <p>Use <code>q</code> for short quotes less than a paragraph long. This is not necessary when quoting an interview you've done, but should be used to point back to source material that lives elsewhere on the Internet. Note that <code>q</code> will insert quotation marks for you but does not create a link back to the original source.</p>
