Finished styling buttons

--- a/index.html
+++ b/index.html
@@ -863,10 +863,12 @@
              <hr />
              <h4 id="buttons">Buttons</h4>
               <p>You can create a button in two ways: with the <code>button</code> element or by adding the <code>.button</code> class to an <code>a</code> tag. With either variation, the button text should be wrapped in <code>span</code> See Foundation's <a href="https://foundation.zurb.com/docs/components/buttons.html">documentation about buttons <i class="fa fa-external-link"></i></a> for more. Especially note the accessibility information.</p>
+              <button><span>Default Button</span></button>
               <div class="panel">
                 <h6 class="label">Buttons</h6>
                 <button><span>Default Button</span></button>
                 <button class="inverse"><span>Inverse Button</span></button>
+                <a href="#" class="button light" role="button"><span>Light Button</span></a>
                 <a href="#" class="button success" role="button"><span>Success Button</span></a>
                 <a href="#" class="button alert" role="button"><span>Alert Button</span></a>
                 <a href="#" class="button warning" role="button"><span>Warning Button</span></a>
