--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- for local dev -->
     <link href="//cloud.webtype.com/css/d4767ecb-457a-4677-8761-72f890add836.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="source/css/purpleline.css" />
-    <link rel="stylesheet" href="source/css/navigation.css" />
-    <link rel="stylesheet" href="source/css/inputs.css" />
+    <link rel="stylesheet" href="source/css/components/navigation.css" />
+    <link rel="stylesheet" href="source/css/components/inputs.css" />
     <link rel="stylesheet" href="source/css/font-awesome/font-awesome.css" />
     <link rel="stylesheet" href="source/css/styleguide.css" />
     <!-- for production -->
@@ -123,6 +123,7 @@
       <div class="medium-9 columns">
         <div class="row">
           <div class="medium-12 columns">
+          
             <p>PurpleLine is a CSS and JavaScript framework for Knight Lab web pages, apps and projects. It is based on <a href="https://foundation.zurb.com/docs/">Foundation 5 <i class="fa fa-external-link"></i></a>. This page itself is built with PurpleLine and Foundation.</p>
             <p>To use PurpleLine in your project, simply include the below links in your project. See the rest of this guide for proper usage of the included components. (To develop on PurpleLine, <a href="//github.com/NUKnightLab/purpleline/blob/master/README.md">see the README on GitHub. <i class="fa fa-external-link"></i></a>)</p>
             <h4>What's included</h4>
