Building out typography. Added projects design use case

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="medium-9 columns">
         <div class="row">
           <div class="medium-12 columns">
-          
+
             <p>PurpleLine is a CSS and JavaScript framework for Knight Lab web pages, apps and projects. It is based on <a href="https://foundation.zurb.com/docs/">Foundation 5 <i class="fa fa-external-link"></i></a>. This page itself is built with PurpleLine and Foundation.</p>
             <p>To use PurpleLine in your project, simply include the below links in your project. See the rest of this guide for proper usage of the included components. (To develop on PurpleLine, <a href="//github.com/NUKnightLab/purpleline/blob/master/README.md">see the README on GitHub. <i class="fa fa-external-link"></i></a>)</p>
             <h4>What's included</h4>
@@ -217,11 +217,11 @@
               <div class="panel">
                 <h6 class="label">Paragraph styles</h6>
                 <p class="lead">Lead paragraphs are used as introductions to projects or other large pages.</p>
-                 <p>By default, body text (like this) is 16px. This 16px base size is what all font sizes are calculated from.</p>
+                 <p>By default, body text (like this) is 18px. This 18px base size is what all font sizes are calculated from.</p>
   <h6 class="label">HTML</h6>
 <pre><code class="html">
   &lt;p class="lead"&gt;Lead paragraphs are used as introductions to projects or other large pages.&lt;/p&gt;
-  &lt;p&gt;By default body text, like this, is 16px. This 16px base size is what all font sizes are calculated from.&lt;/p&gt;
+  &lt;p&gt;By default body text, like this, is 18px. This 18px base size is what all font sizes are calculated from.&lt;/p&gt;
 
 </code></pre>
 
@@ -538,7 +538,7 @@
             </div>
 
             <p>Assumes that the background of the page they are placed on will be white.</p>
-            <div class="panel">
+            <div class="panel" style="background-color:#FFF;">
               <h6 class="label">Tabs</h6>
               <ul class="tabs" data-tab>
                 <li class="tab-title active">
