Thinking of pausing to move to foundation 6

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
@@ -870,6 +870,7 @@
                 <button><span>Default Button</span></button>
                 <button class="inverse"><span>Inverse Button</span></button>
                 <a href="#" class="button light" role="button"><span>Light Button</span></a>
+                <a href="#" class="button ghost" role="button"><span>Ghost Button</span></a>
                 <a href="#" class="button success" role="button"><span>Success Button</span></a>
                 <a href="#" class="button alert" role="button"><span>Alert Button</span></a>
                 <a href="#" class="button warning" role="button"><span>Warning Button</span></a>
